--- a/website/top/ytu/chem/sbs/cgjjjxwtdff.htm
+++ b/website/top/ytu/chem/sbs/cgjjjxwtdff.htm
@@ -781,14 +781,14 @@ function setHomepagea1067869a()
                         </div>
                         <div class="art-body">
     <div id="vsb_content_1057_u131"><div id="vsb_content"><div align="center">
- <table cellspacing="0" cellpadding="0" width="590">
-  <tbody>
-   <tr class="firstRow" style="height:42px">
-    <td width="590" height="42" style="border: 1px solid windowtext; padding: 0px 7px;"><p style="text-align:left;line-height:27px"><span style="font-size:16px;font-family:宋体;color:black">成果解决教学问题的方法</span></p><p style="text-align:left;margin-top:8px;margin-right:7px;margin-bottom:8px;margin-left:0;text-indent:37px;line-height:28px"><strong><span style="font-size:19px;font-family:仿宋">（<span lang="EN-US">1</span>）基于“三范式”科学构建基础学科创新人才培养模式，解决人才培养模式与国家重大战略需求匹配度不高的问题</span></strong></p><p style="text-align:left;margin-right:7px;text-indent:28px;line-height:28px"><span style="font-size:19px;font-family:仿宋">基于学生知识结构与运用能力曲线上升过程的螺旋式，联动教师共同对所学知识、原理进行再学习、再认知、再思考。“师师间”“师生间”围绕课程体系设计、课程内容优化等方面进行常态化专题研讨，设计并制定了差异化与个性化的培养方案，打造了强化学生科研创新与实践能力的“科学实践课”等高阶课程，为贯通式人才培养奠定坚实基础。</span></p><p style="text-align: center"><img src="/__local/2/6D/00/3B08AA38305703616078C5AC13C_DE255ACD_302B4.png" width="282" height="300" vsbhref="vurl" vurl="/_vsl/26D003B08AA38305703616078C5AC13C/DE255ACD/302B4" vheight=" 300px" vwidth=" 282px" orisrc="/__local/2/6D/00/3B08AA38305703616078C5AC13C_DE255ACD_302B4.png" class="img_vsb_content" style="width: 282px; height: 300px;"></p><p style="text-align:left;margin-right:7px;text-indent:28px;line-height:28px"><br></p><p style="text-align:left;margin-right:7px;text-indent:37px;line-height:28px"><span style="font-size:19px;font-family:仿宋">基于学生综合素质与创新能力提升的阶梯式，遵循学生成长认知规律，整合学科资源，打造校内与校外、国内与国外的一体化实践育人平台。学生依托该平台进行实践类课程的学习、广泛参与学科竞赛和课外实践项目、深度参与国家重点研发课题，多措并举为学生综合能力的稳步提升提供保障。</span></p><p style="text-align: center"><img src="/__local/7/0F/1E/7F09CFBA7A5EB1AB1380264C4EB_8E1A3481_19C98.jpg" width="500" vsbhref="vurl" vurl="/_vsl/70F1E7F09CFBA7A5EB1AB1380264C4EB/8E1A3481/19C98" vheight="" vwidth="500" orisrc="/__local/7/0F/1E/7F09CFBA7A5EB1AB1380264C4EB_8E1A3481_19C98.jpg" class="img_vsb_content"></p><p style="text-align:left;margin-right:7px;text-indent:28px;line-height:28px"><span style="font-size:19px;font-family:仿宋">基于学生科学与人文素养培养的熏陶式，着力营建“思政教育<span lang="EN-US">+</span>专业教育<span lang="EN-US">+</span>实践教育”三位一体深度融合的育人氛围。以制度保障、精品活动、氛围营建为着眼点，充分发挥显性教育和隐性教育的协同效应，全面落实学业、学术“双导师”机制，开展极具学科特色的“名师悟语”“学科前沿”等系列校园文化精品活动，涵养学生家国情怀、激发志趣、锤炼品格。</span><br></p><p style="text-align: center"><img src="/__local/5/58/5C/3B8855CA09DD8368451AC09DBDC_123EC79A_5AB0.jpg" width="254" vsbhref="vurl" vurl="/_vsl/5585C3B8855CA09DD8368451AC09DBDC/123EC79A/5AB0" vheight="" vwidth="254" orisrc="/__local/5/58/5C/3B8855CA09DD8368451AC09DBDC_123EC79A_5AB0.jpg" class="img_vsb_content"></p><p style="text-align:left;margin-right:7px;text-indent:28px;line-height:28px"><strong><span style="font-size:19px;font-family:仿宋">（<span lang="EN-US">2</span>）基于“四融合”打造基础学科创新人才培养一体化路径，解决人才培养目标育人路径不清晰的问题</span></strong><br></p><p style="text-align:left;margin-right:7px;text-indent:37px;line-height:28px"><span style="font-size:19px;font-family:仿宋">将以往育才与育人、教学与科研、理论与实践、课内与课外的“单打独斗”模式，转化为多维互动的一体化育人合力，绘制基础学科创新人才培养助推国家“锐实力”提升的全员、全过程、全方位的同心圆。将科技前沿成果快速、高效引入教学环节，做好课程衔接性设计的同时，以学科竞赛、“知行计划<span lang="EN-US">”</span>项目等实践活动为载体，延伸知识学习时间与拓展能力提升空间，让学生在实践中聆听“中国故事”、感受“中国力量”，实现基础学科人才培养“学成”与“洄游”的闭环式人才培养新路径。</span></p><p style="text-align:left;margin-right:7px;text-indent:37px;line-height:28px"><strong><span style="font-size: 19px;">（</span></strong><strong><span lang="EN-US" style="font-size:19px">3</span></strong><strong><span style="font-size: 19px;">）基于“三阶式”实现本科教学团队建设与可持续发展，解决高水平</span></strong><strong><span style="font-size: 19px;">教学团队组建模式与教师发展困境的问题</span></strong><br></p><p style="text-align:left;margin-top:0;margin-right:7px;margin-bottom:8px;margin-left:2px;text-indent:37px;line-height:28px"><span style="font-size:19px;font-family:仿宋">把握“点、线、面”的关键环节，由学术造诣高和教学能力强的教师共同打造化学学科“无机化学”等核心课程群；建立培养与激励机制，构建一阶“<strong>能教课”</strong>、<strong>二阶“教好课”、三阶“会教课”</strong>的教师<strong>教学能力提升与职业发展新模式，激发</strong>教师夯实教学基本功、优化教学内容、创新教学方法的源动力，为高水平教学团队组建与可持续发展、育人能力持续提升提供坚实保障。</span></p><p style="text-align:left;margin-top:0;margin-right:7px;margin-bottom:8px;margin-left:2px;text-indent:32px;line-height:28px"><br></p><p style="text-align:left;margin-top:0;margin-right:7px;margin-bottom:8px;margin-left:2px;text-indent:32px;line-height:28px"><br></p></td>
-   </tr>
-  </tbody>
- </table>
-</div>
+<iframe
+  src="../../_local/sbs/3成果解决教学问题的方法.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1057_u13" name="vsb_content_1057_u13"></span><br /><br />
     
@@ -836,5 +836,6 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
