--- a/website/top/ytu/chem/sbs/tjdwyj.htm
+++ b/website/top/ytu/chem/sbs/tjdwyj.htm
@@ -774,7 +774,7 @@ function setHomepagea1067869a()
                         <div class="art-body">
     <div id="vsb_content_1068_u131"><div id="vsb_content"><p style="text-indent: 0">
  <iframe
-  src="../../_local/tjdwyj/luodihong-shenbo-jianli.pdf"
+  src="../../_local/tjdwyj/9推荐单位意见.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -828,6 +828,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
