--- a/website/top/ytu/chem/sbs/zywcdwqk.htm
+++ b/website/top/ytu/chem/sbs/zywcdwqk.htm
@@ -773,7 +773,7 @@ function setHomepagea1067869a()
                         <div class="art-body">
     <div id="vsb_content_1066_u131"><div id="vsb_content"><p style="text-indent: 0">
  <iframe
-  src="../../_local/zywcdwqk/8主要完成单位情况.pdf"
+  src="../../_local/sbs/8主要完成单位情况.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -827,6 +827,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
