--- a/website/top/ytu/chem/sbs/zywcrqk.htm
+++ b/website/top/ytu/chem/sbs/zywcrqk.htm
@@ -775,7 +775,7 @@ function setHomepagea1067869a()
                         <div class="art-body">
     <div id="vsb_content_1065_u131"><div id="vsb_content"><p style="text-indent: 0">
 <iframe
-  src="../../_local/zywcrqk/luodihong-shenbo-jianli.pdf"
+  src="../../_local/sbs/7主要完成人.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -830,6 +830,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
