--- a/website/top/ytu/chem/sbs/cgdtgyyxg.htm
+++ b/website/top/ytu/chem/sbs/cgdtgyyxg.htm
@@ -784,6 +784,14 @@ function setHomepagea1067869a()
   loading="lazy"
   referrerpolicy="no-referrer">
 </iframe>
+<iframe
+  src="../../_local/sbs/6本成果中数字化应用情况.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1059_u13" name="vsb_content_1059_u13"></span><br /><br />
     
@@ -831,6 +839,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
