--- a/website/top/ytu/chem/sbs/cgdtgyyxg.htm
+++ b/website/top/ytu/chem/sbs/cgdtgyyxg.htm
@@ -784,6 +784,12 @@ function setHomepagea1067869a()
   loading="lazy"
   referrerpolicy="no-referrer">
 </iframe>
+<script>_addDynClicks('wbnews',1874774002,1059)</script>
+<div class="art-tit cont-tit">
+                            <h3>成果的数字化应用效果</h3>
+                        </div>
+                        <div class="art-body">
+    <div id="vsb_content_1059_u131"><div id="vsb_content"><p style="text-align:left;line-height:27px">
 <iframe
   src="../../_local/sbs/6本成果中数字化应用情况.pdf"
   width="100%"
@@ -839,6 +845,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
