--- a/website/top/ytu/chem/sbs/cgdtgyyxg.htm
+++ b/website/top/ytu/chem/sbs/cgdtgyyxg.htm
@@ -786,7 +786,7 @@ function setHomepagea1067869a()
 </iframe>
 <script>_addDynClicks('wbnews',1874774002,1059)</script>
 <div class="art-tit cont-tit">
-                            <h3>成果的数字化应用效果</h3>
+                            <h3>成果中数字化应用效果</h3>
                         </div>
                         <div class="art-body">
     <div id="vsb_content_1059_u131"><div id="vsb_content"><p style="text-align:left;line-height:27px">
@@ -845,6 +845,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
