--- a/website/top/ytu/chem/cgbg/cgyjbj.htm
+++ b/website/top/ytu/chem/cgbg/cgyjbj.htm
@@ -773,7 +773,7 @@ function setHomepagea1067869a()
 构和培养模式的创新。为培养符合国家战略和医药产业发展需
 要的高层次人才，药学必须遵循“新医科”建设要求，构建起
 与之相适应的人才培养体系，全面提升培养质量。</span></p>
-<p style="text-indent:37px;line-height:40px"><span lang="EN-US" style="font-size:19px;font-family:仿宋_gb2312">21</span><span style="font-size:19px;font-family:仿宋_gb2312">2000年，烟台大学与烟台绿叶制药有限公司合作共建药学
+<p style="text-indent:37px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">2000年，烟台大学与烟台绿叶制药有限公司合作共建药学
 院，双方共同成立联合办学委员会，成为国内产教融合的先行
 者。经过二十余年的探索与实践，创建了“教师双聘、校企共
 育”的人才培养新模式，搭建起“平台共享、研产协同”的科
@@ -826,6 +826,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
