--- a/website/top/ytu/chem/cgbg/cgfzlc.htm
+++ b/website/top/ytu/chem/cgbg/cgfzlc.htm
@@ -755,14 +755,16 @@ function setHomepagea1067869a()
                             <h3>成果发展历程</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1064_u131"><div id="vsb_content"><p style="margin-top:10px;margin-right:6px;margin-bottom: 0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:40px"><strong><span style="font-size:19px;font-family:仿宋_gb2312">（<span lang="EN-US">1</span>）成果发展历程1</span></strong></p>
-<p style="margin-top:10px;margin-right:6px;margin-bottom: 0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">成果完成与实践期间，获得省级及以上化学类竞赛奖<span lang="EN-US">50</span>项，其中国际大赛<span lang="EN-US">Biomod</span>、<span lang="EN-US">iGEM</span><strong>金奖<span lang="EN-US">3</span>项</strong>（团队），银奖<span lang="EN-US">2</span>项（团队）；全国大学生化学实验创新设计大赛、全国大学生化学实验邀请赛等国家级竞赛<strong>特等奖<span lang="EN-US">3</span>项</strong>，一等奖<span lang="EN-US">4</span>项，二等奖<span lang="EN-US">6</span>项；在读本科生以<strong>第一作者</strong>身份发表<span lang="EN-US">SCI</span>检索学术论文<span lang="EN-US">31</span>篇。毕业的本科生<span lang="EN-US">2006</span>级程鹏、<span lang="EN-US">2008</span>级王洋、<span lang="EN-US">2011</span>级艾心、<span lang="EN-US">2012</span>级曹博成、<span lang="EN-US">2014</span>级董金润以第一作者身份在<strong>顶级期刊《<span lang="EN-US">Nature</span>》和《<span lang="EN-US">Science</span>》</strong>发表论文<span lang="EN-US">5</span>篇，毕业生广泛就职于科技部、工信部等各级政府职能部门，中科院等科研院校，中石化、华为等企事业单位。<span lang="EN-US">20</span>年来，培养的本科生已有<span lang="EN-US">15</span>人入选国家级领军人才，<span lang="EN-US">32</span>人入选国家级青年人才。</span></p>
-<p style="margin-top:10px;margin-right:6px;margin-bottom: 0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">（<span lang="EN-US">2</span>）成果发展历程2</span></strong></p>
-<p style="text-indent:37px;line-height:40px"><span style="font-size:19px;font-family: 仿宋_gb2312">成果实施期间，学院的学科优势持续转化为教学优势，<span lang="EN-US">1</span>个团队获评<strong>首批“全国黄大年式教师团队”</strong>；获评<strong>全国模范教师</strong><span lang="EN-US">1</span>人、<strong>国家教学名师</strong><span lang="EN-US">1</span>人，<strong>省级教学名师</strong><span lang="EN-US">2</span>人和<strong>宝钢优秀教师</strong><span lang="EN-US">2</span>人；出版质量高、影响大的高水平理论和实验教材<span lang="EN-US">33</span>本，其中国家级规划教材<span lang="EN-US">5</span>套，“《无机化学》第四版”荣获<strong>全国优秀教材二等奖</strong>；教学团队获得省级及以上教学相关奖励<span lang="EN-US">23</span>项<strong>，</strong>“无机化学（上、下）”“物理化学<span lang="EN-US">(</span>上、下<span lang="EN-US">)</span>”“化学基础和综合实验”等<span lang="EN-US">7</span>门课程获评<strong>国家级精品课、精品资源共享课、国家一流课程</strong>；化学、应用化学等<span lang="EN-US">4</span>个专业获评<strong>国家一流专业</strong>。<strong>“新形态”教学模式</strong>下打造课程思政浸润教学，高阶思维贯通教学，影响大，受益面广的“无机化学”线上线下混合式国家一流课程和“结构化学”晶体教学虚拟仿真教学系统，云端教学保障力强。<strong>协同育人</strong>成果获评教育部《读懂中国》微视频制作一等奖、吉林省高校校园文化建设成果奖。成果集聚效应显著。</span></p>
-<p style="margin-top:10px;margin-right:6px;margin-bottom: 0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">（<span lang="EN-US">3</span>）成果发展历程3</span></strong></p>
-<p style="text-indent:37px;line-height:40px"><span style="font-size:19px;font-family: 仿宋_gb2312">成果完成及实践期间，打造的人才培养模式已在吉林大学<span lang="EN-US">70</span>余个专业、每年万余名学生的理论和实验教学中得到应用，学院成功获批国家<strong>拔尖计划<span lang="EN-US">2.0</span>化学基地的召集单位</strong>。自<span lang="EN-US">2013</span>年以来，团队成员在教育部高教司、教育部化学课程教指委、国内高端化学论坛等教学研讨活动中，围绕人才培养模式、基地建设、课程建设、教材建设等方面，受邀作报告、经验介绍<span lang="EN-US">35</span>场次；<strong>布里斯托大学、北京大学等<span lang="EN-US">100</span>余所学校<span lang="EN-US">1000</span>余名师生来校交流</strong>。目前，吉林大学化学学科的人才培养和教师队伍建设模式已被包括上海交通大学、中山大学等<span lang="EN-US">12</span>所<strong>高校广泛借鉴</strong>，先后被<strong>中央电视台、中国教育新闻网</strong>等<strong>主流媒体广泛报道</strong>。</span></p>
-<p style="text-indent:37px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">经过实践和检验，吉林大学化学学科利用该成果有效解释了<strong>“为什么能”</strong>培养大量杰出人才，同时也保障了在未来高水平创新人才培养中<strong>“继续行”</strong>的问题。该成果不仅是对吉大化学学科人才培养理念和方法的<strong>传承与创新</strong>，更是对<strong>新时代高校基础学科人才培养提供重要的指导和借鉴意义。</strong></span></p>
-<p><br></p></div></div>
+    <div id="vsb_content_1064_u131"><div id="vsb_content"><p style="margin-top:10px;margin-right:6px;margin-bottom: 0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:40px">
+<iframe
+  src="../../_local/cgbj/2成果发展历程.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
+        <p><br></p></div></div>
     <span id="vsb_content_1064_u13" name="vsb_content_1064_u13"></span><br /><br />
     
 </div>
@@ -810,6 +812,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
