--- a/website/top/ytu/chem/cgbg/cgtgyyy.htm
+++ b/website/top/ytu/chem/cgbg/cgtgyyy.htm
@@ -760,18 +760,15 @@ function setHomepagea1067869a()
                             <h3>推广1</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1063_u131"><div id="vsb_content"><p style="margin-top:8px;margin-right:6px;margin-bottom: 8px;margin-left:0;text-indent:37px;line-height:40px"><span style="font-family: 黑体, SimHei;"><span lang="EN-US" style="font-size: 19px;">（一）</span><strong><span style="font-size: 19px;">基于“三范式”科学构建基础学科创新人才培养模式，解决人才培养模式与国家重大战略需求匹配度不高的问题</span></strong></span></p>
-<p style="text-indent:37px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">推广2：</span></strong></p>
-<p style="text-indent:37px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">基于<strong>学生知识结构与运用能力曲线上升过程的螺旋式</strong>，联动教师共同对所学知识、原理进行再学习、再认知、再思考。“师师间”“师生间”围绕课程模式设计、课程内容优化等方面进行常态化专题研讨，设计并制定了差异化与个性化的培养方案，打造了强化学生科研创新与实践能力的“科学实践课”等高阶课程，为贯通式人才培养奠定坚实基础。</span></p>
-<p style="margin-right:6px;text-indent:37px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">基于<strong>学生综合素质与创新能力提升的阶梯式</strong>，遵循学生成长认知规律，整合学科资源，打造校内与校外、国内与国外的一体化实践育人平台。学生依托该平台进行实践类课程的学习、广泛参与学科竞赛和课外实践项目、深度参与国家重点研发课题，多措并举为学生综合能力的稳步提升提供保障。</span></p>
-<p style="text-indent:37px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">基于<strong>学生科学与人文素养培养的熏陶式</strong>，着力营建“思政教育<span lang="EN-US">+</span>专业教育<span lang="EN-US">+</span>实践教育”三位一体深度融合的育人氛围。以制度保障、精品活动、氛围营建为着眼点，充分发挥显性教育和隐性教育的协同效应，全面落实学业、学术“双导师”机制，开展极具学科特色的“名师悟语”“学科前沿”等系列校园文化精品活动，涵养学生家国情怀、激发志趣、锤炼品格。</span></p>
-<p style="text-indent:37px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">推广3：率先创建具有“三范式”特征的基础学科创新人才培养模式。</span></strong><span style="font-size:19px;font-family:仿宋_gb2312">改变了人才培养过程中各关键环节割裂式进行的情况，转变了“教过即教会”“学过即学会”的传统思维，通过创建知识上升螺旋式、能力提升阶梯式、素养培养熏陶式的基础学科创新人才培养新模式，培养的在读本科生发表多篇高水平学术论文，在顶级竞赛中屡获殊荣，<strong>毕业生深受录用单位的一致好评</strong>。学生“<strong>厚基础、强能力，会创新</strong>”等特征显著。</span></p>
-<p style="text-indent:37px;line-height:40px"><span style="font-family: 黑体, SimHei;"><strong><span style="font-size: 19px;">（二）</span></strong><strong><span style="font-size: 19px;">基于“四融合”打造基础学科创新人才培养一体化路径，解决人才培养育人路径不清晰的问题</span></strong></span></p>
-<p style="text-indent:37px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">推广4：</span></strong><span style="font-size:19px;font-family:仿宋_gb2312">将育才与育人、教学与科研、理论与实践、课内与课外的“单打独斗”模式，转化为多维互动的<strong>一体化育人合力</strong>，绘制基础学科创新人才培养助推国家“锐实力”提升的全员、全过程、全方位的同心圆。将科技前沿成果快速引入教学环节，做好课程衔接性设计的同时，以学科竞赛、“知行计划</span><span lang="EN-US" style="font-size:19px">”</span><span style="font-size:19px;font-family:仿宋_gb2312">项目等实践活动为载体，延伸知识学习时间与拓展能力提升空间，让学生在实践中聆听“中国故事”、感受“中国力量”，实现<strong>基础学科人才培养“学成”与“洄游”的闭环式人才培养新路径</strong>。</span></p>
-<p style="text-indent:37px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">推广5：率先打造基础学科创新人才培养“四融合”一体化育人路径。</span></strong><span style="font-size:19px;font-family:仿宋_gb2312">改变以往育才与育人、教学与科研、理论与实践、课内与课外融合度不高、“单打独斗”等现象，营造多维互动、协同推进的<strong>“思政教育<span lang="EN-US">+</span>专业教育<span lang="EN-US">+</span>实践教育”一体化育人环境</strong>，形成基础学科创新人才培养“学成”的新路径，<strong>筑好人才“洄游”的“蓄水池”</strong>。成果实践期间，化学、应用化学等<span lang="EN-US">4</span>个专业获评国家一流专业、国家基础学科拔尖学生培养计划<span lang="EN-US">1.0</span>和<span lang="EN-US">2.0</span>基地、吉林省“三全育人”综合改革试点单位。</span></p>
-<p style="margin-top:8px;margin-right:0;margin-bottom:8px;margin-left:0;text-indent:37px;line-height:40px"><span style="font-family: 黑体, SimHei;"><strong><span style="font-size: 19px;">（三）</span></strong><strong><span style="font-size: 19px;">基于“三阶式”实现本科教学团队建设与可持续发展，解决高水平</span></strong><strong><span style="font-size: 19px;">教学团队组建模式与教师发展困境的问题</span></strong></span></p>
-<p style="text-indent:37px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">推广6：</span></strong><span style="font-size:19px;font-family:仿宋_gb2312">把握“点、线、面”的关键环节，由学术造诣高和教学能力强的教师共同打造化学学科“无机化学”等核心课程群；<strong>建立培养与激励机制</strong>，<strong>构建一阶“能教课”、二阶“教好课”、三阶“会教课”的教师教学能力提升与职业发展新模式，</strong>激发教师夯实教学基本功、优化教学内容、创新教学方法的源动力，为高水平教学团队组建与可持续发展、育人能力持续提升提供坚实保障。</span></p>
-<p style="text-indent:37px;line-height:40px"><strong><span style="font-size:19px;font-family: 仿宋_gb2312">推广7：率先构筑高水平教学团队建设与教师可持续发展的保障机制。</span></strong><span style="font-size:19px;font-family:仿宋_gb2312">目前高校普遍存在高水平教学团队组建后难以持续充分发挥作用、教师可持续发展的保障机制不健全的情况。围绕核心课程群的建设，充分发挥骨干教师引领、辐射作用，组建了由学术造诣高和教学能力强的教师为主导的教学团队，<strong>构筑了“三阶式”的教师教学能力提升与职业发展的一体化新模式，</strong>从制度建设、激励机制等层面，多措并举持续为教师育人能力提升与团队的发展提供坚实保障。成果完成期间，产出了一批<strong>国家级名师、名团队、名课程、名教材</strong>，形成了教学成果<strong>聚集效应</strong>。</span></p>
+    <div id="vsb_content_1063_u131"><div id="vsb_content"><p style="margin-top:8px;margin-right:6px;margin-bottom: 8px;margin-left:0;text-indent:37px;line-height:40px">
+<iframe
+  src="../../_local/zywcdwqk/4成果推广与应用.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1063_u13" name="vsb_content_1063_u13"></span><br /><br />
     
@@ -819,6 +816,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
