--- a/website/top/ytu/chem/cgbg/cgzyyjnr.htm
+++ b/website/top/ytu/chem/cgbg/cgzyyjnr.htm
@@ -761,9 +761,15 @@ function setHomepagea1067869a()
                             <h3>成果主要研究内容</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1060_u131"><div id="vsb_content"><p style="margin-top:8px;text-indent: 37px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">为把我国建设成为世界主要科学中心，高校肩负着为国家培养基础学科创新人才的重要使命。而选拔、培养基础学科创新型人才，为新时代自然科学发展播种火种，具有强烈的紧迫性。吉林大学化学学科始建于<span lang="EN-US">1952</span>年，由老一代化学家蔡镏生院士、唐敖庆院士等亲手创建。改革开放以来，培养了<span lang="EN-US">13</span>位两院院士、<span lang="EN-US">5</span>位国家教学名师等学界翘楚和行业巨擘。吉林大学化学学院已成为我国化学人才培养的摇篮。</span></p>
-<p style="text-indent:37px;line-height:40px"><span lang="EN-US" style="font-size:19px;font-family:仿宋_gb2312">21</span><span style="font-size:19px;font-family:仿宋_gb2312">世纪，化学进入新的发展阶段，传统学科间的界限越来越模糊，化学与其他学科联系越来越紧密，学生需要掌握交叉融合的知识结构、创新驱动的科研能力、全面综合的人文素养。基于此，我们在深入探究吉林大学化学类本科人才培养所具有的传统人才培养特色与模式的同时，以<span lang="EN-US">2009</span>年国家基础学科拔尖人才培养试验计划为着眼点，以基础学科创新人才的培养为立足点，遵循<strong>“教”</strong>和<strong>“学”</strong>的两规律，立项并打造了以教师知识传授与学生运用能力上升过程<strong>“螺旋式”</strong>、学生综合与创新能力提升<strong>“阶梯式”</strong>、学生科学与人文素养培养<strong>“熏陶式”</strong>的<strong>“三范式”为育人模式</strong>，以育才与育人、理论与实践、教学与科研、课内与课外的<strong>“四融合”为育人路径</strong>的化学类本科专业人才培养新模式。</span></p>
-<p style="margin-top:8px;text-indent: 37px;line-height:40px"><span style="font-size:19px;font-family:仿宋_gb2312">经过实践检验，构建的基础学科创新人才培养新模式，在注重培养学生基础理论、基础知识和基本技能的同时，更加注重创造力、交叉研究能力、创新思维、批判思维等综合能力的培养，<strong>有效解决基础学科创新人才培养模式与国家重大战略需求匹配度不高的问题</strong>；以“四融合”为路径，围绕新时代培养数理知识扎实、综合竞争力优、使命感和责任感强的创新人才的要求，转变教学、管理、服务等方面相对“孤立式”的育人路径<strong>为一体式路径</strong>，形成育人合力，<strong>解决了基础学科创新人才培养育人路径不清晰的问题。</strong>基于<strong>“三阶式”</strong>构筑教师教学能力提升与职业发展新模式，实现本科教学团队建设与可持续发展，改变高等学校普遍存在的教学与科研脱节，科教融合不足，科研优势未能及时转化为教学优势的现象，为高水平教学团队组建与可持续发展、育人能力持续提升保驾护航。</span></p>
+    <div id="vsb_content_1060_u131"><div id="vsb_content"><p style="margin-top:8px;text-indent: 37px;line-height:40px">
+<iframe
+  src="../../_local/zywcdwqk/3成果主要研究内容.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1060_u13" name="vsb_content_1060_u13"></span><br /><br />
     
@@ -811,6 +817,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
