--- a/website/top/ytu/chem/cgbg/cgtgyyy.htm
+++ b/website/top/ytu/chem/cgbg/cgtgyyy.htm
@@ -757,7 +757,7 @@ function setHomepagea1067869a()
 
 <script>_addDynClicks('wbnews',1874774002,1063)</script>
 <div class="art-tit cont-tit">
-                            <h3>推广1</h3>
+                            <h3>成果推广与应用</h3>
                         </div>
                         <div class="art-body">
     <div id="vsb_content_1063_u131"><div id="vsb_content"><p style="margin-top:8px;margin-right:6px;margin-bottom: 8px;margin-left:0;text-indent:37px;line-height:40px">
@@ -816,6 +816,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
