--- a/website/top/ytu/chem/cgpj/cgyyzm.htm
+++ b/website/top/ytu/chem/cgpj/cgyyzm.htm
@@ -752,7 +752,7 @@ function setHomepagea1067869a()
                         <div class="art-body">
     <div id="vsb_content_1096_u131"><div id="vsb_content"><p style="text-indent: 0">
  <iframe
-  src="../../_local/yyzm/luodihong-shenbo-jianli.pdf"
+  src="../../_local/yyzm/成果应用证明.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -806,6 +806,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
