--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -948,35 +948,35 @@ function setHomepagea1067869a()
     function u_u11_init_img()
     {
 
-            u_u11_imgs.addImg("../_local/1制剂研究中心.jpg", "0", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/0制剂研究中心.jpg", "0", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/2研究生学术研讨会.jpg", "1", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/1研究生学术研讨会.jpg", "1", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/3研究生培养单位年会.jpg", "2", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/2研究生培养单位年会.jpg", "2", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/4研发中心.jpg", "3", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/3研发中心.jpg", "3", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/5烟台大学毕毅教授1.jpg", "4", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/4烟台大学毕毅教授.jpg", "4", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/6学位研究生培养示范基地.jpg", "5", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/5学位研究生培养示范基地.jpg", "5", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/7双师型导师风采1.jpg", "6", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/6双师型导师风采.jpg", "6", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/8双师型导师风采2.jpg", "7", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/7双师型导师风采.jpg", "7", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/9高等教育博览会报告.jpg", "8", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/8高等教育博览会报告.jpg", "8", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/10车间生产.jpg", "9", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/9车间生产.jpg", "9", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/11产教融合高峰论坛.jpg", "10", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/10产教融合高峰论坛.jpg", "10", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/12参观东方海洋.jpg", "11", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/11参观东方海洋.jpg", "11", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/13精品课程.jpg", "12", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/12精品课程.jpg", "12", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/14双师型导师风采3.jpg", "13", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/13双师型导师风采.jpg", "13", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/15烟台大学毕毅教授2.jpg", "14", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/14烟台大学毕毅教授.jpg", "14", u_u11_onimgload);
 
     }
     function u_u11_onimgload(img, imgid)
@@ -1129,6 +1129,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
