--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -960,9 +960,9 @@ function setHomepagea1067869a()
 
             u_u11_imgs.addImg("../_local/5学位研究生培养示范基地.jpg", "5", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/6双师型导师风采.bmp", "6", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/6双师型导师风采.jpg", "6", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/7双师型导师风采.bmp", "7", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/7双师型导师风采.jpg", "7", u_u11_onimgload);
 
             u_u11_imgs.addImg("../_local/8高等教育博览会报告.jpg", "8", u_u11_onimgload);
 
@@ -974,7 +974,7 @@ function setHomepagea1067869a()
 
             u_u11_imgs.addImg("../_local/12精品课程.jpg", "12", u_u11_onimgload);
 
-            u_u11_imgs.addImg("../_local/13双师型导师风采.bmp", "13", u_u11_onimgload);
+            u_u11_imgs.addImg("../_local/13双师型导师风采.jpg", "13", u_u11_onimgload);
 
             u_u11_imgs.addImg("../_local/14烟台大学毕毅教授.jpg", "14", u_u11_onimgload);
 
@@ -1129,6 +1129,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
