--- a/website/top/ytu/chem/cgbg/cgtgyyy.htm
+++ b/website/top/ytu/chem/cgbg/cgtgyyy.htm
@@ -255,7 +255,17 @@ function setHomepagea1067862a()
                         <div>
                             <ul>
 
-                                 <a href="../zccl1/kyxm.htm">教师其他奖励</a>
+                             <li>
+                                    <a href="../zccl1/sjjysjgxm.htm">成果曾获奖励情况</a>
+                                </li>
+
+
+                                <li>
+                                    <a href="../zccl1/jxgglw.htm">教学改革研究论文</a>
+                                </li>
+
+                                <li>
+                                    <a href="../zccl1/kyxm.htm">教师其他奖励</a>
                                 </li>
 
                                 <li>
@@ -265,7 +275,6 @@ function setHomepagea1067862a()
                                 <li>
                                     <a href="../zccl1/bksfblwjhj.htm">学生代表性成果</a>
                                 </li>
-
   
                             </ul>
                         </div>
@@ -535,7 +544,17 @@ function setHomepagea1067869a()
                         <span></span>
                         <ul>
 
-                             <a href="../zccl1/kyxm.htm">教师其他奖励</a>
+                            <li>
+                                    <a href="../zccl1/sjjysjgxm.htm">成果曾获奖励情况</a>
+                                </li>
+
+
+                                <li>
+                                    <a href="../zccl1/jxgglw.htm">教学改革研究论文</a>
+                                </li>
+
+                                <li>
+                                    <a href="../zccl1/kyxm.htm">教师其他奖励</a>
                                 </li>
 
                                 <li>
@@ -722,6 +741,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
