--- a/website/top/ytu/chem/zccl1.htm
+++ b/website/top/ytu/chem/zccl1.htm
@@ -649,40 +649,20 @@ function setHomepagea1067869a()
 
 支撑材料</h2>
                     <ul>   <li>
-                            <a href="zccl1/sjjysjgxm.htm">省级及以上教改项目</a>
+                            <a href="zccl1/sjjysjgxm.htm">成果曾获奖励情况</a>
+                        </li>
+    <li>
+                            <a href="zccl1/jxgglw.htm">教学改革研究论文</a>
+                        </li>
+    <li>
+                            <a href="zccl1/kyxm.htm">教师其他奖励</a>
+                        </li>
+
+   <li>
+                            <a href="zccl1/cgsfytg.htm">成果推广与应用</a>
                         </li>
    <li>
-                            <a href="zccl1/kyxm.htm">科研项目</a>
-                        </li>
-   <li>
-                            <a href="zccl1/jxgglw.htm">教学改革论文</a>
-                        </li>
-   <li>
-                            <a href="zccl1/sjjyshjzs.htm">省级及以上获奖证书</a>
-                        </li>
-   <li>
-                            <a href="zccl1/bksfblwjhj.htm">本科生发表论文及获奖</a>
-                        </li>
-   <li>
-                            <a href="zccl1/bd.htm">报道</a>
-                        </li>
-   <li>
-                            <a href="zccl1/cbjc.htm">出版教材</a>
-                        </li>
-   <li>
-                            <a href="zccl1/jxcgzl.htm">教学成果专利</a>
-                        </li>
-   <li>
-                            <a href="zccl1/msskysshdjl.htm">名师授课与师生互动交流</a>
-                        </li>
-   <li>
-                            <a href="zccl1/jxjyjlbg.htm">教学经验交流报告</a>
-                        </li>
-   <li>
-                            <a href="zccl1/cgsfytg.htm">成果示范与推广</a>
-                        </li>
-   <li>
-                            <a href="zccl1/yxbysxx.htm">优秀毕业生信息</a>
+                            <a href="zccl1/bksfblwjhj.htm">学生代表性成果</a>
                         </li>
 </ul>
                 </div>
@@ -764,6 +744,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
