--- a/website/top/ytu/chem/zccl1/sjjyshjzs.htm
+++ b/website/top/ytu/chem/zccl1/sjjyshjzs.htm
@@ -651,41 +651,21 @@ function setHomepagea1067869a()
 
 
 支撑材料</h2>
-                    <ul>   <li>
-                            <a href="sjjysjgxm.htm">省级及以上教改项目</a>
+                    <ul>   <li class="active on">
+                            <a href="sjjysjgxm.htm">成果曾获奖励情况</a>
+                        </li>
+    <li>
+                            <a href="jxgglw.htm">教学改革研究论文</a>
+                        </li>
+    <li>
+                            <a href="kyxm.htm">教师其他奖励</a>
+                        </li>
+
+   <li>
+                            <a href="cgsfytg.htm">成果推广与应用</a>
                         </li>
    <li>
-                            <a href="kyxm.htm">科研项目</a>
-                        </li>
-   <li>
-                            <a href="jxgglw.htm">教学改革论文</a>
-                        </li>
-   <li class="active on">
-                            <a href="sjjyshjzs.htm">省级及以上获奖证书</a>
-                        </li>
-   <li>
-                            <a href="bksfblwjhj.htm">本科生发表论文及获奖</a>
-                        </li>
-   <li>
-                            <a href="bd.htm">报道</a>
-                        </li>
-   <li>
-                            <a href="cbjc.htm">出版教材</a>
-                        </li>
-   <li>
-                            <a href="jxcgzl.htm">教学成果专利</a>
-                        </li>
-   <li>
-                            <a href="msskysshdjl.htm">名师授课与师生互动交流</a>
-                        </li>
-   <li>
-                            <a href="jxjyjlbg.htm">教学经验交流报告</a>
-                        </li>
-   <li>
-                            <a href="cgsfytg.htm">成果示范与推广</a>
-                        </li>
-   <li>
-                            <a href="yxbysxx.htm">优秀毕业生信息</a>
+                            <a href="bksfblwjhj.htm">学生代表性成果</a>
                         </li>
 </ul>
                 </div>
@@ -773,6 +753,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
