--- a/website/top/ytu/chem/zccl1/jxgglw.htm
+++ b/website/top/ytu/chem/zccl1/jxgglw.htm
@@ -675,7 +675,7 @@ function setHomepagea1067869a()
 
 
 
-教学改革论文</h3>
+教学改革研究论文</h3>
                         </div>
                     </div>
                     <div class="art-main">
@@ -687,12 +687,12 @@ function setHomepagea1067869a()
 
 <script>_addDynClicks('wbnews',1874774002,1121)</script>
 <div class="art-tit cont-tit">
-                            <h3>教学改革论文</h3>
+                            <h3>教学改革研究论文</h3>
                         </div>
                         <div class="art-body">
     <div id="vsb_content_1121_u131"><div id="vsb_content"><style><!--  /* Font Definitions */  @font-face {font-family:宋体; panose-1:2 1 6 0 3 1 1 1 1 1;} @font-face {font-family:黑体; panose-1:2 1 6 9 6 1 1 1 1 1;} @font-face {font-family:"Cambria Math"; panose-1:2 4 5 3 5 4 6 3 2 4;} @font-face {font-family:等线; panose-1:2 1 6 0 3 1 1 1 1 1;} @font-face {font-family:Calibri; panose-1:2 15 5 2 2 2 4 3 2 4;} @font-face {font-family:"\@宋体"; panose-1:2 1 6 0 3 1 1 1 1 1;} @font-face {font-family:"\@黑体"; panose-1:2 1 6 0 3 1 1 1 1 1;} @font-face {font-family:"\@等线"; panose-1:2 1 6 0 3 1 1 1 1 1;}  /* Style Definitions */  p.MsoNormal, li.MsoNormal, div.MsoNormal {margin:0cm; text-align:justify; text-justify:inter-ideograph; font-size:10.5pt; font-family:等线;} h1 {mso-style-link:"标题 1 字符"; margin-top:6.0pt; margin-right:0cm; margin-bottom:6.0pt; margin-left:21.55pt; text-align:justify; text-justify:inter-ideograph; line-height:150%; page-break-before:always; page-break-after:avoid; font-size:16.0pt; font-family:"Calibri",sans-serif;} span.1 {mso-style-name:"标题 1 字符"; mso-style-link:"标题 1"; font-family:"Calibri",sans-serif; font-weight:bold;} p.vsb_10, li.vsb_10, div.vsb_10 {mso-style-name:图片样式1; mso-style-link:"图片样式1 Char"; margin:0cm; text-align:center; line-height:150%; font-size:10.5pt; font-family:"Calibri",sans-serif;} p.a, li.a, div.a {mso-style-name:表标题; mso-style-link:"表标题 Char"; margin-top:0cm; margin-right:0cm; margin-bottom:2.5pt; margin-left:0cm; text-align:center; line-height:120%; page-break-after:avoid; font-size:12.0pt; font-family:黑体; font-weight:bold;} span.1Char {mso-style-name:"图片样式1 Char"; mso-style-link:图片样式1; font-family:"Calibri",sans-serif;} span.Char {mso-style-name:"表标题 Char"; mso-style-link:表标题; font-family:黑体; font-weight:bold;} .MsoChpDefault {font-family:等线;}  /* Page Definitions */  @page WordSection1 {size:595.3pt 841.9pt; margin:72.0pt 90.0pt 2.0cm 90.0pt; vsb_temp:15.6pt;} div.WordSection1 {page:WordSection1;} --></style>
 <iframe
-  src="../../_local/jxgglw/luodihong-shenbo-jianli.pdf"
+  src="../../_local/zccl/2教学改革研究论文.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -747,6 +747,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
