--- a/website/top/ytu/chem/cgjj.htm
+++ b/website/top/ytu/chem/cgjj.htm
@@ -665,8 +665,15 @@ function setHomepagea1067869a()
                             <h3>校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1140_u131"><div id="vsb_content"><p>吉大化学学科创建70年来，秉承蔡镏生院士、唐敖庆院士等老一辈化学家“重理论、重实践”的教育思想和“厚基础、强能力、重实践”的教学传统，以全面培养能够担当民族复兴大任的基础学科创新人才为目标，落实立德树人根本任务，为国家培养了院士、名师等大量杰出人才。21世纪，化学与其他学科联系越发紧密，学生需要掌握交叉融合的知识结构、创新驱动的科研能力、全面综合的人文素养。我们秉承吉林大学化学学科的优良教学传统，围绕国家培养基础学科拔尖人才的重大战略需求，以学生成长为中心，创新构建以教师知识传授与学生运用能力上升过程“螺旋式”、学生综合与创新能力提升“阶梯式”、学生科学与人文素养培养“熏陶式”的“三范式”为育人模式；以育才与育人、理论与实践、教学与科研、课内与课外的“四融合”为育人路径；以构建高水平教学团队建设与教师可持续发展的机制为育人保障的基础学科拔尖创新人才培养体系，解决了多个制约拔尖人才培养的关键问题，在人才培养理念、机制建设和条件保障方面形成了创新成果，具有重要战略意义。</p>
-<p>成果实施期间，学科优势持续转化为教学优势，产出了一批国家级名师、名团队、名课程、名教材，形成成果集聚效应。本科生深度参与国家重点项目研究，交叉、融合知识的运用能力显著增强，综合能力和创新能力明显提升，在各类学科竞赛中屡创佳绩。成果创新性强、应用效果好、辐射作用大。</p>
+    <div id="vsb_content_1140_u131"><div id="vsb_content">
+<iframe
+  src="../_local/sbs/成果简介.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1140_u13" name="vsb_content_1140_u13"></span><br /><br />
     
@@ -714,6 +721,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
