--- a/website/top/ytu/chem/sbs.htm
+++ b/website/top/ytu/chem/sbs.htm
@@ -699,7 +699,7 @@ function setHomepagea1067869a()
                         <div class="art-body">
     <div id="vsb_content_1095_u131"><div id="vsb_content"><p style="text-indent: 0">
 <iframe
-  src="../_local/sbs/luodihong-shenbo-jianli.pdf"
+  src="../_local/sbs/申报书.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -753,6 +753,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
