--- a/website/top/ytu/chem/zccl1.htm
+++ b/website/top/ytu/chem/zccl1.htm
@@ -690,7 +690,7 @@ function setHomepagea1067869a()
                         <div class="art-body">
     <div id="vsb_content_1101_u131"><div id="vsb_content"><p style="text-indent: 0">
 <iframe
-  src="../_local/zccl/支撑材料.pdf"
+  src="../_local/zccl/附件完整版.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -744,6 +744,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
