--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -708,11 +708,16 @@ function setHomepagea1067869a()
                             校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践
                         </a>
                     </div>
-                    <div>
-                         <p>
-                             本成果贯彻“新医科”建设要求，依托烟台大学与绿叶制药校企共建药学院的深厚基础，双方以产教共生为目标，课程“目标共定、团队共组、方案共商、场域共享、案例共建、项目共研”，将《药学前沿》建设成为“思政全景贯穿，学术与产业、基础与前沿、理论与实践、案例与项目、线上与线下、课堂与拓展相结合”的研究生立体化课程，链接教育供给与产业需求，为药学人才培养提供可复制、可推广的课程建设实践方案。
-                         </p>
-                    </div>
+                <div>
+                  <p style="
+                      font-family: 'Microsoft YaHei', 'PingFang SC', 'Helvetica Neue', Arial, sans-serif;
+                      font-size: 16px;
+                      line-height: 1.6;
+                      color: #333;
+                  ">
+                    本成果贯彻“新医科”建设要求，依托烟台大学与绿叶制药校企共建药学院的深厚基础，双方以产教共生为目标，课程“目标共定、团队共组、方案共商、场域共享、案例共建、项目共研”，将《药学前沿》建设成为“思政全景贯穿，学术与产业、基础与前沿、理论与实践、案例与项目、线上与线下、课堂与拓展相结合”的研究生立体化课程，链接教育供给与产业需求，为药学人才培养提供可复制、可推广的课程建设实践方案。
+                  </p>
+                </div>
 
 <script>_showDynClickBatch(['dynclicks_u10_1140'],[1140],"wbnews", 1874774002)</script>
 </div>
@@ -1047,6 +1052,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
