--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -697,7 +697,7 @@ function setHomepagea1067869a()
             <div class="px1220 clearfix">
                 <script language="javascript" src="../system/resource/js/centerCutImg.js"></script><script language="javascript" src="../system/resource/js/ajax.js"></script>
 <video class="s1-video" controls="controls" muted poster="">
-                    <source src="../../../../aaaaa202507.mp4" type="video/mp4"></source>
+                    <source src="../../../aaaaa202507.mp4" type="video/mp4"></source>
                 </video>
 
 <script>_showDynClickBatch(['dynclicks_u9_1190'],[1190],"wbnews", 1874774002)</script>
@@ -1052,6 +1052,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
