--- a/website/top/ytu/chem/zccl1/sjjysjgxm.htm
+++ b/website/top/ytu/chem/zccl1/sjjysjgxm.htm
@@ -642,7 +642,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="../zccl1.htm">支撑材料</a>
               <span>-></span>
-                <a href="sjjysjgxm.htm">省级及以上教改项目</a>
+                <a href="sjjysjgxm.htm">成果曾获奖励情况</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -747,6 +747,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
