--- a/website/top/ytu/chem/zccl1/jxgglw.htm
+++ b/website/top/ytu/chem/zccl1/jxgglw.htm
@@ -641,7 +641,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="../zccl1.htm">支撑材料</a>
               <span>-></span>
-                <a href="jxgglw.htm">教学改革论文</a>
+                <a href="jxgglw.htm">教学改革研究论文</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -747,6 +747,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
