--- a/website/top/ytu/chem/zccl1/kyxm.htm
+++ b/website/top/ytu/chem/zccl1/kyxm.htm
@@ -642,7 +642,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="../zccl1.htm">支撑材料</a>
               <span>-></span>
-                <a href="kyxm.htm">科研项目</a>
+                <a href="kyxm.htm">教师其他奖励</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -747,6 +747,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
