--- a/website/top/ytu/chem/zccl1/cgsfytg.htm
+++ b/website/top/ytu/chem/zccl1/cgsfytg.htm
@@ -637,7 +637,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="../zccl1.htm">支撑材料</a>
               <span>-></span>
-                <a href="cgsfytg.htm">成果示范与推广</a>
+                <a href="cgsfytg.htm">成果推广与应用</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -743,6 +743,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
