--- a/website/top/ytu/chem/zccl1/bksfblwjhj.htm
+++ b/website/top/ytu/chem/zccl1/bksfblwjhj.htm
@@ -633,7 +633,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="../zccl1.htm">支撑材料</a>
               <span>-></span>
-                <a href="bksfblwjhj.htm">本科生发表论文及获奖</a>
+                <a href="bksfblwjhj.htm">学生代表性成果</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -739,6 +739,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
