--- a/website/top/ytu/chem/sbs/cgchjlqk.htm
+++ b/website/top/ytu/chem/sbs/cgchjlqk.htm
@@ -709,21 +709,15 @@ function setHomepagea1067869a()
   loading="lazy"
   referrerpolicy="no-referrer">
 </iframe>
-<p><br></p></div></div>
-    <span id="vsb_content_1054_u13" name="vsb_content_1054_u13"></span><br /><br />
-    
-</div>
-</div>
-                </div>
+<div class="clear"></div>
 
-                <div class="clear"></div>
-            </div>
-        </div>
-
-        <div class="foot">
-              <div class="px1220"><!-- 版权内容请在本组件"内容配置-版权"处填写 -->
-<p>地址：山东省烟台市莱山区清泉路30号&nbsp;&nbsp;@版权所有 烟台大学教学成果奖</p></div>
-        </div>
+<!-- 页脚 -->
+<div class="foot">
+  <div class="px1220">
+    <!-- 版权内容请在本组件"内容配置-版权"处填写 -->
+    <p>地址：山东省烟台市莱山区清泉路30号&nbsp;&nbsp;@版权所有 烟台大学教学成果奖</p>
+  </div>
+</div>
 
         <script type="text/javascript" src="../js/index.js"></script>
     <script>
@@ -756,6 +750,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
