--- a/website/top/ytu/chem/sbs/cgjjjzyjjdjxwt.htm
+++ b/website/top/ytu/chem/sbs/cgjjjzyjjdjxwt.htm
@@ -703,7 +703,7 @@ function setHomepagea1067869a()
                             <h3>成果简介及主要解决的教学问题</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1056_u131"><div id="vsb_content"><div align="center">
+    <div id="vsb_content_1056_u131"><div id="vsb_content"><p style="text-align:left;line-height:39px"><br></p>
 <iframe
   src="../../_local/sbs/2成果简介及主要解决的教学问题.pdf"
   width="100%"
@@ -712,8 +712,17 @@ function setHomepagea1067869a()
   loading="lazy"
   referrerpolicy="no-referrer">
 </iframe>
+<p><br></p></div></div>
+    <span id="vsb_content_1056_u131" name="vsb_content_1056_u131"></span><br /><br />
+    
+</div>
+</div>
+                </div>
 
                 <div class="clear"></div>
+            </div>
+        </div>
+
         <div class="foot">
               <div class="px1220"><!-- 版权内容请在本组件"内容配置-版权"处填写 -->
 <p>地址：山东省烟台市莱山区清泉路30号&nbsp;&nbsp;@版权所有 烟台大学教学成果奖</p></div>
@@ -750,6 +759,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
