--- a/website/top/ytu/chem/sbs/cgchjlqk.htm
+++ b/website/top/ytu/chem/sbs/cgchjlqk.htm
@@ -699,7 +699,7 @@ function setHomepagea1067869a()
                             <h3>成果曾获奖励情况</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1054_u131"><div id="vsb_content"><div align="center">
+    <div id="vsb_content_1054_u131"><div id="vsb_content"><div align="center"><p style="text-align:left;line-height:39px"><br></p>
 
 <iframe
   src="../../_local/sbs/1成果曾获奖励情况.pdf"
@@ -756,6 +756,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
