--- a/website/top/ytu/chem/sbs/cgdtgyyxg.htm
+++ b/website/top/ytu/chem/sbs/cgdtgyyxg.htm
@@ -713,7 +713,7 @@ function setHomepagea1067869a()
                             <h3>成果中数字化应用效果</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1059_u131"><div id="vsb_content"><p style="text-align:left;line-height:27px">
+    <div id="vsb_content_1059_u131"><div id="vsb_content"><div align="center"><p style="text-align:left;line-height:27px">
 <iframe
   src="../../_local/sbs/6本成果中数字化应用情况.pdf"
   width="100%"
@@ -769,6 +769,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
