--- a/website/top/ytu/chem/sbs/cgjjjzyjjdjxwt.htm
+++ b/website/top/ytu/chem/sbs/cgjjjzyjjdjxwt.htm
@@ -703,7 +703,7 @@ function setHomepagea1067869a()
                             <h3>成果简介及主要解决的教学问题</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1056_u131"><div id="vsb_content"><div align="center"><p style="text-align:left;line-height:39px"><br></p>
+    <div id="vsb_content_1056_u131"><div id="vsb_content"><div align="center">
 <iframe
   src="../../_local/sbs/2成果简介及主要解决的教学问题.pdf"
   width="100%"
@@ -712,6 +712,7 @@ function setHomepagea1067869a()
   loading="lazy"
   referrerpolicy="no-referrer">
 </iframe>
+</div>
 <p><br></p></div></div>
     <span id="vsb_content_1056_u131" name="vsb_content_1056_u131"></span><br /><br />
     
@@ -759,6 +760,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
