--- a/website/top/ytu/chem/sbs/cgchjlqk.htm
+++ b/website/top/ytu/chem/sbs/cgchjlqk.htm
@@ -699,7 +699,7 @@ function setHomepagea1067869a()
                             <h3>成果曾获奖励情况</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1054_u131"><div id="vsb_content"><div align="center"><p style="text-align:left;line-height:39px"><br></p>
+    <div id="vsb_content_1054_u131"><div id="vsb_content"><div align="center">
 
 <iframe
   src="../../_local/sbs/1成果曾获奖励情况.pdf"
@@ -709,6 +709,7 @@ function setHomepagea1067869a()
   loading="lazy"
   referrerpolicy="no-referrer">
 </iframe>
+</div>
 <p><br></p></div></div>
     <span id="vsb_content_1054_u13" name="vsb_content_1054_u13"></span><br /><br />
     
@@ -756,6 +757,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
