--- a/website/top/ytu/chem/sbs/cgjjjxwtdff.htm
+++ b/website/top/ytu/chem/sbs/cgjjjxwtdff.htm
@@ -704,7 +704,7 @@ function setHomepagea1067869a()
                             <h3>成果解决教学问题的方法</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1057_u131"><div id="vsb_content"><div align="center"><p style="text-align:left;line-height:39px"><br></p>
+    <div id="vsb_content_1057_u131"><div id="vsb_content"><div align="center">
 <iframe
   src="../../_local/sbs/3成果解决教学问题的方法.pdf"
   width="100%"
@@ -713,6 +713,7 @@ function setHomepagea1067869a()
   loading="lazy"
   referrerpolicy="no-referrer">
 </iframe>
+</div>
 <p><br></p></div></div>
     <span id="vsb_content_1057_u13" name="vsb_content_1057_u13"></span><br /><br />
     
@@ -760,6 +761,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
