--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -706,8 +706,8 @@ function setHomepagea1067869a()
                 <div>
                   <p style="
                       font-family: 'Microsoft YaHei', 'PingFang SC', 'Helvetica Neue', Arial, sans-serif;
-                      font-size: 16px;
-                      line-height: 1.6;
+                      font-size: 20px;
+                      line-height: 1.8;
                       color: #333;
                   ">
                     本成果贯彻“新医科”建设要求，依托烟台大学与绿叶制药校企共建药学院的深厚基础，双方以产教共生为目标，课程“目标共定、团队共组、方案共商、场域共享、案例共建、项目共研”，将《药学前沿》建设成为“思政全景贯穿，学术与产业、基础与前沿、理论与实践、案例与项目、线上与线下、课堂与拓展相结合”的研究生立体化课程，链接教育供给与产业需求，为药学人才培养提供可复制、可推广的课程建设实践方案。
@@ -747,7 +747,7 @@ function setHomepagea1067869a()
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1174.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="制剂研究中心" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">制剂研究中心</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
@@ -1047,6 +1047,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
